Get user by ID endpoint created
